[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Piotr Chmielowski <piotrek.chmielowski@interia.pl>"]
edition = "2018"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["gfx"]

#[target.'cfg(target_os = "linux")'.dependencies]
#sdl2 = "0.32"

#[target.'cfg(target_os = "windows")'.dependencies]
#sdl2 = { version = "0.32.0", features = ["bundled", "static-link"] }

[dependencies]
rand = "0.6.5"
time = "0.1.42"
